--- a/FlightControlWeb/wwwroot/index.html
+++ b/FlightControlWeb/wwwroot/index.html
@@ -16,6 +16,19 @@
             document.getElementById('inputCompany').value = "";
         }
         function enterNewFlight() {
+            var productsUrl = "../api/Flights"
+            const toSend = {
+                flight_id: "ABVC1234",
+                company_name: "company123",
+                passengers: 35
+            };
+            /*
+            const jsonString = JSON.stringify(toSend)
+            const xhr = new XMLHttpRequest();
+            xhr.open("POST", productsUrl);
+            xhr.setRequestHeader("Content-Type", "application/json");
+            xhr.send(jsonString);
+            */
             var inputNumber = document.getElementById('inputNumber').value;
             var inputCompany = document.getElementById('inputCompany').value;
             $("#tblFlights").append("<tr><td>" + inputNumber + "</td" + "<td>" + " " + inputCompany + "</td></tr>");
@@ -26,6 +39,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     
     <script>
+
         /*
         var productsUrl = "../api/Flight"
         $.getJSON(productsUrl, function (data) {
