final, coding styled&error indication

--- a/FlightControlWeb/wwwroot/index.html
+++ b/FlightControlWeb/wwwroot/index.html
@@ -81,7 +81,7 @@
         <!--Error indication-->
         <div class="row firstrow">
             <div class="col-md-4">
-                <div id="error_indication" class="alert alert-danger collapse">
+                <div id="error_indication" class="alert alert-danger collapse fixed-top" style="width:500px">
                     <a herf="#" class="close" data-dismiss="alart">&times;</a>
                 </div>
             </div>
